SID2/3/4/20: update,  SID-21: debugging

--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/10/10"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/10/11"
    ]
   },
   {
@@ -26,7 +26,6 @@
    "source": [
     "import copy\n",
     "import datetime\n",
-    "import glob\n",
     "import math\n",
     "import matplotlib.colors as colors\n",
     "import matplotlib.pyplot as plt\n",
@@ -51,17 +50,17 @@
    "source": [
     "# The latest CDF library https://spdf.gsfc.nasa.gov/pub/software/cdf/dist/latest/\n",
     "from spacepy import pycdf\n",
-    "\n",
     "import os\n",
     "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cal_lib   as juice_cal\n",
-    "import juice_cdf_lib   as juice_cdf\n",
-    "import juice_math_lib  as juice_math\n",
-    "import juice_sid21_lib as juice_sid21\n",
-    "import juice_spec_lib  as juice_spec"
+    "import juice_cal_lib    as juice_cal\n",
+    "import juice_cdf_lib    as juice_cdf\n",
+    "import juice_math_lib   as juice_math\n",
+    "import juice_sid21_data as juice_data\n",
+    "import juice_sid21_lib  as juice_sid21\n",
+    "import juice_spec_lib   as juice_spec"
    ]
   },
   {
@@ -75,78 +74,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Mode set ***\n",
-    "band_mode = 0                           # 0: sum    1: /Hz\n",
-    "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
-    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
-    "\n",
-    "# *** Parameter set ***\n",
-    "cal = 0                                 # 0: background     1: CAL\n",
-    "p_raw_max = 10.0                        # background: 7.5   CAL: 10\n",
-    "p_raw_min = 3.0                         # background: 2.5   CAL: 5\n",
-    "\n",
-    "p_max0 = p_raw_max\n",
-    "p_min0 = p_raw_min\n",
-    "print(\"MAX-min:\", p_max0, p_min0)"
+    "# *** Dump ***\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
+    "# *** CAL ***\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "# *** Unit ***\n",
+    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
+    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
+    "# *** Power range ***\n",
+    "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
+    "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
+    "# *** Directory set: set by User ***\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0d556f41",
+   "execution_count": 4,
+   "id": "7d2cd885",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Ground Test - Ver.2 ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "\n",
-    "# *** Ver.2 ***\n",
-    "# 202310 -- SAMPLE\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name_list = ['SID21_20231024-0046.cdf',\n",
-    "                 ]\n",
-    "\n",
-    "# 202310 -- FS\n",
-    "\"\"\"\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name_list = ['SID21_Seq05.cdf',\n",
-    "                 ]\n",
-    "\"\"\""
+    "N_ch0     = 4                           # [channel]   2: 2-ch    3: 3-ch                            >3: any\n",
+    "comp_mode = 4                           # [Complex]   0: Poweer  1: Matrix                          >3: any"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ec8054a",
+   "execution_count": 5,
+   "id": "4b785ffb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Group read\n",
-    "\"\"\"\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/05/23/'        # CDF data folder\n",
-    "data_name = '*SID4*.cdf'\n",
-    "cdf_file = data_dir + data_name\n",
-    "data_name_list = glob.glob(cdf_file)\n",
-    "num_list = len(data_name_list)\n",
-    "data_name_list.sort()\n",
-    "for i in range(num_list):\n",
-    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
-    "\"\"\""
+    "E_min = '2024-08-19 20:30:00';  t_min0 = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
+    "E_max = '2024-08-19 20:40:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
+    "t_min0 = 0;  t_max0 = 0"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "093823c4",
+   "id": "db0a27c1",
    "metadata": {},
    "source": [
     "# get CDF data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "563700b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# date='20240909'\n",
+    "date='0'\n",
+    "ver = 'V02'\n",
+    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -161,21 +152,25 @@
     "\n",
     "data = struct()\n",
     "num_list = len(data_name_list)\n",
-    "\n",
     "for i in range(num_list):\n",
-    "    data_name = data_name_list[i]\n",
-    "    cdf_file = data_dir + data_name\n",
-    "    print(i, cdf_file)\n",
+    "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
     "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
     "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid21.hf_sid21_read(cdf, RPWI_FSW_version)\n",
     "    if i==0:\n",
-    "        data = data1\n",
-    "        print(data.EuEu.shape)\n",
+    "        data = data1;                                  print(data.EuEu.shape)\n",
     "    else:\n",
-    "        data = juice_sid21.hf_sid21_add(data, data1)\n",
-    "        print(data.EuEu.shape)    \n",
-    "\n",
-    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+    "        data = juice_sid21.hf_sid21_add(data, data1);  print(data.EuEu.shape)\n",
+    "data_name = os.path.split(data_name)[1];               print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "45a3dff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = juice_sid21.hf_sid21_shaping(data)"
    ]
   },
   {
@@ -185,52 +180,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "cdf_file = data_dir + data_name\n",
-    "%ls $cdf_file\n",
-    "\n",
-    "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid21.juice_getdata_hf_sid21(cdf)\n",
-    "\"\"\"\n",
-    "data = juice_sid21.hf_sid21_shaping(data)\n",
-    "\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
+    "str_date = date1 + \"  -  \" + date2\n",
+    "n_time0 = data.EuEu.shape[0];    n_freq0 = data.EuEu.shape[1]\n",
+    "f_min0  = data.frequency[0][0];  f_max0  = (max(np.ravel(data.frequency)))\n",
     "\n",
-    "n_time = data.EuEu.shape[0];  n_freq = data.EuEu.shape[1]\n",
-    "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.EuEu.shape, n_time, n_freq)"
+    "print(\"       date and time:\", str_date)\n",
+    "print(\"           data size:\", data.EuEu.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"]\")\n",
+    "print(\"           Frequency:\", f_min0,  \"-\", f_max0, \"kHz\")\n",
+    "print(\"f, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0], data.freq_step[0][0])\n",
+    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
+    "\n",
+    "if N_ch0     > 3:\n",
+    "    N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "if comp_mode > 3:\n",
+    "    comp_mode = data.complex[0]\n",
+    "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")\n",
+    "#\n",
+    "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
+    "if (comp_mode == 0):\n",
+    "    print(\"             complex:\", comp_mode, \" (power 2-ch) <Table 6.5.2>\")\n",
+    "    N_component = N_ch0;          print(\"       ==> Component:\", N_component)\n",
+    "else:\n",
+    "    print(\"             complex:\", comp_mode, \" (nominal spectral matrix 2-ch) <Table 6.5.3>\")\n",
+    "    N_component = N_ch0 * N_ch0;  print(\"       ==> Component:\", N_component)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5139f229",
+   "metadata": {},
+   "source": [
+    "# Spectrum Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f894ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mode \n",
-    "N_ch = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
-    "if (data.complex[0] == 0):\n",
-    "    print(\"complex:\", data.complex[0], \" (power 2-ch) <Table 6.5.2>\")\n",
-    "    N_component = 2\n",
-    "else:\n",
-    "    print(\"complex:\", data.complex[0], \" (spectral matrix 2-ch) <Table 6.5.3>\")\n",
-    "    N_component = 4\n",
-    "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
-    "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
-    "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "854d0063",
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_HF  = 25;  T_RWI = 25"
+    "T_HF  = 25;  T_RWI = 25\n",
+    "print(\"Temperature: \", 'HF - {:.1f}'.format(T_HF), '  RWI - {:.1f}'.format(T_RWI), ' <No Temp data in SID-21>')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22fe631a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec = copy.deepcopy(data)\n",
+    "spec = juice_cal.spec_cal(spec,  21, unit_mode, band_mode, T_HF, T_RWI)     # CAL\n",
+    "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw\n",
+    "\n",
+    "Epoch_1d  = spec.epoch.tolist();      n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
+    "freq_1d   = spec.freq  [n_time1//2];  n_freq1 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
+    "freq_w_1d = spec.freq_w[n_time1//2]\n",
+    "\n",
+    "# NAN\n",
+    "if gap_mode == 1 and time_mode == 0:\n",
+    "    for i in range(n_time1-1):\n",
+    "        if spec.scet[i+1]-spec.scet[i] > 60:\n",
+    "            print(\"[gap]\", i, spec.epoch[i], i+1, spec.epoch[i+1])\n",
+    "            juice_sid21.spec_nan(spec, i);   juice_sid21.spec_nan(spec, i+1)"
    ]
   },
   {
@@ -246,6 +262,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d3d5829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_max0 = p_raw_max + spec.cf/10;  p_min0 = p_raw_min + spec.cf/10\n",
+    "#p_max0 = np.ceil(np.log10( np.nanmax( [np.nanmax(spec.EuEu), np.nanmax(spec.EvEv), np.nanmax(spec.EwEw)] ) )*5)/5+.5\n",
+    "#p_min0 = np.ceil(np.log10( np.nanmin( [np.nanmin(spec.EuEu), np.nanmin(spec.EvEv), np.nanmin(spec.EwEw)] ) )*5)/5-.5\n",
+    "p_max  = p_max0;                  p_min  = p_min0\n",
+    "print(\"conversion factor:\", '{:.1f}'.format(spec.cf), \"    MAX-min:\", '{:.1f}'.format(p_max), '({:.1f})'.format(p_max0), '{:.1f}'.format(p_min), '({:.1f})'.format(p_min0), \"   str_unit:\", spec.str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a31956b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print( np.nanmax(spec.EuEu), np.nanmax(spec.EvEv), np.nanmax(spec.EwEw) )\n",
+    "print( np.nanmin(spec.EuEu), np.nanmin(spec.EvEv), np.nanmin(spec.EwEw) )"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "3dbd3949",
@@ -256,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "0c0ac766",
    "metadata": {},
    "outputs": [],
@@ -414,9 +455,7 @@
    "outputs": [],
    "source": [
     "# Sweep_num\n",
-    "n0 = 0\n",
-    "n1 = np.int16(n_time0/2)\n",
-    "n2 = n_time0 # - 11\n",
+    "n0 = 0;  n1 = np.int16(n_time0/2);  n2 = -1\n",
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# Y-range\n",
@@ -533,17 +572,17 @@
     "\n",
     "# Peak\n",
     "print(\"[First]\")\n",
-    "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "print(\"[Mid]\")\n",
-    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "print(\"[Last]\")\n",
-    "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
+    "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
    ]
   },
   {
@@ -668,16 +707,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "EuEu_c = juice_math.clean_rfi(np.ravel(data.EuEu), 17)\n",
     "EvEv_c = juice_math.clean_rfi(np.ravel(data.EvEv), 17)\n",
     "EwEw_c = juice_math.clean_rfi(np.ravel(data.EwEw), 17)\n",
-    "EuEu_c = EuEu_c.reshape(n_time, n_freq)\n",
-    "EvEv_c = EvEv_c.reshape(n_time, n_freq)\n",
-    "EwEw_c = EwEw_c.reshape(n_time, n_freq)\n",
+    "EuEu_c = EuEu_c.reshape(n_time1, n_freq1)\n",
+    "EvEv_c = EvEv_c.reshape(n_time1, n_freq1)\n",
+    "EwEw_c = EwEw_c.reshape(n_time1, n_freq1)\n",
     "EuEu_c_2d = EuEu_c.transpose()\n",
     "EvEv_c_2d = EvEv_c.transpose()\n",
     "EwEw_c_2d = EwEw_c.transpose()"
@@ -699,7 +738,7 @@
     "# Sweep_num\n",
     "n0 = 0\n",
     "n1 = np.int16(n_time0/2)\n",
-    "n2 = n_time0\n",
+    "n2 = -1\n",
     "# X-range\n",
     "f_min0 = f_min;  f_max0 = f_max\n",
     "# Y-range\n",
