--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/19"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/10/10"
    ]
   },
   {
@@ -730,9 +730,9 @@
     "print(\"Peak   Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str)\n",
     "print(\"Peak   Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
     "print(\"Peak   Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)\n",
-    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)"
+    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)"
    ]
   },
   {
@@ -744,17 +744,17 @@
    "source": [
     "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
     "print(f\"[First peak - {n_sweep1}]\");  freq_1d = spec.freq[n_sweep1][0]\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
     "print(f\"[Mid   peak - {n_sweep2}]\");  freq_1d = spec.freq[n_sweep2][0]\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
     "print(f\"[Last  peak - {n_sweep3}]\");  freq_1d = spec.freq[n_sweep3][0]\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))"
+    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))"
    ]
   },
   {
@@ -803,13 +803,13 @@
     "    png_fname = work_dir+data_name+'_spec-first.png'\n",
     "    fig.savefig(png_fname)\n",
     "\n",
-    "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
    ]
   },
@@ -857,13 +857,13 @@
     "    png_fname = work_dir+data_name+'_spec-mid.png'\n",
     "    fig.savefig(png_fname)\n",
     "\n",
-    "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
    ]
   },
@@ -913,13 +913,13 @@
     "    fig.savefig(png_fname)\n",
     "\n",
     "# Peak\n",
-    "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
    ]
   },
@@ -1139,7 +1139,7 @@
     "\n",
     "# Peak\n",
     "peak_E = np.ravel(auto.EE[n_sweep][0][10:]);  peak_T = np.ravel(data.time[0][0][10:])\n",
-    "peak_t = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
+    "peak_t = np.nanargmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
    ]
   },
   {
@@ -1190,7 +1190,7 @@
     "    fig.savefig(png_fname)\n",
     "\n",
     "peak_E = np.ravel(auto.EE[n_sweep][0][10:]);  peak_T = np.ravel(data.time[0][0][10:])\n",
-    "peak_t = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
+    "peak_t = np.nanargmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
    ]
   },
   {
@@ -1242,7 +1242,7 @@
     "\n",
     "# Peak\n",
     "peak_E = np.ravel(auto.EE[n_sweep][0][10:]);  peak_T = np.ravel(data.time[0][0][10:])\n",
-    "peak_t = np.argmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
+    "peak_t = np.nanargmax(peak_E); print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_t]), \"at\", '{:.2f}'.format(peak_T[peak_t]*1000), \"msec\")"
    ]
   },
   {
