--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/9/22"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/10/10"
    ]
   },
   {
@@ -135,7 +135,7 @@
     "date='20240822'   # CAL\n",
     "# date='0'\n",
     "ver = 'V02'\n",
-    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -434,11 +434,11 @@
     "if gap_mode == 1 and time_mode == 0:\n",
     "    for i in range(n_time1-1):\n",
     "        if data.scet[i+1]-data.scet[i] > 60:\n",
-    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            print(\"[gap]\", i, data.epoch[i], i+1, data.epoch[i+1])\n",
     "            juice_sid2.hf_sid2_spec_nan(data, i);   juice_sid2.hf_sid2_spec_nan(data, i+1)\n",
     "\n",
-    "spec = juice_spec.hf_getspec_angle (spec, 2)                               # Coherency & ange\n",
-    "spec = juice_spec.hf_getspec_stokes(spec, 2)                               # Stokes and Polarization Parameters"
+    "spec = juice_spec.hf_getspec_angle (spec, 2)                            # Coherency & ange\n",
+    "spec = juice_spec.hf_getspec_stokes(spec, 2)                            # Stokes and Polarization Parameters"
    ]
   },
   {
@@ -491,16 +491,16 @@
     "print(\"Peak   Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
     "print(\"Peak   Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)\n",
     "#\n",
-    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E)\n",
+    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
     "if unit_mode==0:\n",
-    "    peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EuEu:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
-    "    peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EvEv:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
-    "    peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E);  print(\"Peak EwEw:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))"
+    "    peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E);  print(\"Peak EuEu:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
+    "    peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.nanargmax(peak_E);  print(\"Peak EvEv:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))\n",
+    "    peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.nanargmax(peak_E);  print(\"Peak EwEw:\", '{:10.0f}'.format(peak_E[peak_f]), '{:x}'.format(np.int64(peak_E[peak_f])))"
    ]
   },
   {
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = n_time1//2;  peak_E = np.ravel(spec.EuEu[n_sweep]); peak_f = np.argmax(peak_E); \n",
+    "n_sweep = n_time1//2;  peak_E = np.ravel(spec.EuEu[n_sweep]); peak_f = np.nanargmax(peak_E); \n",
     "print(f\"[SWEEP - {n_sweep}]  Peak at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\", peak_f)\n",
     "print(\"     EuEu:\", '{:+.2e}'.format(np.ravel(spec.EuEu   [n_sweep])[peak_f]), spec.str, \"     EvEv:\", '{:+.2e}'.format(np.ravel(spec.EvEv   [n_sweep])[peak_f]), spec.str, \"   EwEw:\", '{:+.2e}'.format(np.ravel(spec.EwEw   [n_sweep])[peak_f]), spec.str)\n",
     "print(\"  EuEv_re:\", '{:+.2e}'.format(np.ravel(spec.EuEv_re[n_sweep])[peak_f]), spec.str, \"  EuEv_im:\", '{:+.2e}'.format(np.ravel(spec.EuEv_im[n_sweep])[peak_f]), spec.str, \"  PHAuv:\", '{:+5.1f} deg'.format(np.ravel(spec.E_PHAuv[n_sweep])[peak_f]), \"  COHuv:\", '{:+4.2f}'.format(np.ravel(spec.E_COHuv[n_sweep])[peak_f]), \"  DoPuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoPuv[n_sweep])[peak_f]), \"  DoLuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoLuv[n_sweep])[peak_f]), \"  DoCuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoCuv[n_sweep])[peak_f]), \"  ANGuv:\", '{:+5.1f} deg'.format(np.ravel(spec.E_ANGuv[n_sweep])[peak_f]))\n",
@@ -530,17 +530,17 @@
    "source": [
     "n_sweep1 = 0;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "print(f\"[Mid   peak - {n_sweep2}]\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "print(f\"[Last  peak - {n_sweep3}]\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))"
+    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))"
    ]
   },
   {
@@ -1118,9 +1118,9 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "peak_E = np.ravel(EuEu_med[0:100]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.1f} kHz  '.format(freq_1d[peak_f]), '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, '{:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(EvEv_med[0:100]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.1f} kHz  '.format(freq_1d[peak_f]), '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, '{:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(EwEw_med[0:100]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.1f} kHz  '.format(freq_1d[peak_f]), '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, '{:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(EuEu_med[0:100]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.1f} kHz  '.format(freq_1d[peak_f]), '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, '{:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(EvEv_med[0:100]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.1f} kHz  '.format(freq_1d[peak_f]), '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, '{:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(EwEw_med[0:100]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.1f} kHz  '.format(freq_1d[peak_f]), '{:.2e}'.format(peak_E[peak_f]), spec.str, '{:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, '{:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
     "\"\"\""
    ]
   },
