--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/10/3"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/10/11"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "# date='20240822'   # CAL\n",
     "# date='0'\n",
     "ver = 'V02'\n",
-    "data_dir, data_name_list = juice_data.hf_sid2_datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -432,8 +432,8 @@
     "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
     "            juice_sid2.hf_sid2_spec_nan(data, i);   juice_sid2.hf_sid2_spec_nan(data, i+1)\n",
     "\n",
-    "spec = juice_spec.hf_getspec_angle (spec)                               # Coherency & ange\n",
-    "spec = juice_spec.hf_getspec_stokes(spec)                               # Stokes and Polarization Parameters"
+    "spec = juice_spec.hf_getspec_angle (spec, 2)                            # Coherency & ange\n",
+    "spec = juice_spec.hf_getspec_stokes(spec, 2)                            # Stokes and Polarization Parameters"
    ]
   },
   {
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "fe30538a",
    "metadata": {},
    "outputs": [],
