--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/9/18"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/10/10"
    ]
   },
   {
@@ -394,11 +394,11 @@
     "\n",
     "# Peak\n",
     "print(\"[First]\")\n",
-    "peak_E = np.ravel(data.EE[n0]); peak_f = np.argmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EE[n0]); peak_f = np.nanargmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "print(\"[Mid]\")\n",
-    "peak_E = np.ravel(data.EE[n1]); peak_f = np.argmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
+    "peak_E = np.ravel(data.EE[n1]); peak_f = np.nanargmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "print(\"[Last]\")\n",
-    "peak_E = np.ravel(data.EE[n2]); peak_f = np.argmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n"
+    "peak_E = np.ravel(data.EE[n2]); peak_f = np.nanargmax(peak_E); print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n"
    ]
   },
   {
